# VSSS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
src/: main.cpp
subprojects/opencv4/: meson.build
subprojects/qt5/: meson.build
utils/scripts/: downloadutils.py  install_opencv.py  install_qt.py  installdeps.py  qtinstall.py  qtinstaller-noninteractive.qs.js
